# finrag

./: .gitignore  README.md  pyproject.toml
configs/: index.yaml  serve.yaml
eval/: cases.jsonl
reports/: eval_report.json
src/finrag/: cli.py  config.py
src/finrag/api/: app.py
src/finrag/eval/: cases.jsonl  metrics.py  run_eval.py
src/finrag/generation/: answer.py  citations.py  prompt.py
src/finrag/indexing/: build_index.py  embed.py  vectorstore.py
src/finrag/ingestion/: chunk.py  load.py  parse.py
src/finrag/qa/: context.py  qa.py  simple.py
src/finrag/retrieval/: simple.py
tests/: test_chunking.py
