[project]
name = "finrag"
version = "0.1.0"
description = "Financial Reports RAG Assistant (LangChain) with citations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain==0.2.16",
  "langchain-community==0.2.16",
  "langchain-openai==0.1.20",
  "openai==1.37.1",
  "pypdf==4.3.1",
  "faiss-cpu==1.8.0.post1",
  "python-dotenv==1.0.1",
  "pydantic==2.8.2",
  "pyyaml==6.0.2",
  "tqdm==4.66.5",
  "fastapi==0.112.2",
  "uvicorn==0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "ruff==0.6.3",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
